# Vertex_picking

./: .gitignore  .qmake.stash  BoxMesh.cpp  BoxMesh.h  BoxObject.cpp  BoxObject.h  CMakeLists.txt  CMakePresets.json  DebugApplication.h  GridObject.h  Model_Vertex.h  ObjModel.cpp  ObjModel.h  OpenGLException.cpp  OpenGLException.h  OpenGLWindow.cpp  PickLineObject.cpp  PickLineObject.h  PickObject.cpp  PickObject.h  SceneView.cpp  SceneViewLeft.cpp  SceneViewLeft.h  ShaderProgram.cpp  ShaderProgram.h  TestDialog.cpp  Transform3d.cpp  Vertex.h  main.cpp  mainwindow.ui  try.pro  try.sln  try.vcxproj  try.vcxproj.filters  vcpkg.json
QOpenGL-example/: CMakeLists.txt
QOpenGL-example/src/: glwidget.cpp
ThisProject/: CMakeLists.txt
ThisProject/shaders/: model_frag.glsl  simple.frag  withWorldAndCamera.vert
ThisProject/src/: BoxMesh.cpp  BoxMesh.h  BoxObject.cpp  BoxObject.h  Camera.h  GridObject.cpp  KeyboardMouseHandler.cpp  KeyboardMouseHandler.h  Model_Vertex.h  ObjModel.cpp  ObjModel.h  OpenGLWindow.h  PickLineObject.cpp  PickObject.cpp  PickObject.h  SceneView.cpp  SceneView.h  SceneViewLeft.cpp  SceneViewLeft.h  TestDialog.h  Transform3d.h  Vertex.h  ui_OpenGLWindow.h
ThisProject/ui/: OpenGLWindow.ui
